--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/styles.css">
   <link href="css/all.css" rel="stylesheet">
-  <title>Document</title>
+  <title>Nebula Astronautics</title>
 </head>
 <body>
   <div class="dropdown">
@@ -18,7 +18,7 @@
      </label>
   <nav class="header">
     <ul>
-      <li class="line-break line-top"><a href="#">Nebula Astronautics</a></li>
+      
       <li class="line-break line-top"><a href="#">Home</a></li>
       <li class="line-break"><a href="#">About</a></li>
       <li class="line-break"><a href="#">Services</a></li>
