Adjusted layout and media queries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href="css/all.css" rel="stylesheet">
   <title>Nebula Astronautics</title>
@@ -336,9 +338,7 @@
     <dl>
       <dt>Hero Pages Are Cool</dt>
       <dd>Make sure you click on the call to action below.</dd>
-      <dd>
-        <button>CLICK HERE</button>
-</dd>
+      <dd><a href="#" class="button">CLICK HERE</a></dd>
     </dl>
   </main>
 </div>
