Added google map and contact section

--- a/contact.html
+++ b/contact.html
@@ -336,9 +336,26 @@
 <div class="page-content">
   <main class="container">
     <div class="hero-section">
-      <h1>Nebula Astronautics</h1>
-      <p>Spearheading space exploration as the revolutionary catalyst in Earth's next Odyssey.</p>
-      <p><a href="https://www.spacex.com/human-spaceflight/moon/" class="cta-button">Contact Us</a></p>
+      <h1>Contact Us</h1>
+      <!-- modify this form HTML and place wherever you want your form -->
+
+<form
+action="https://formspree.io/f/xqkgjjdj"
+method="POST"
+>
+<label>
+  Your email:
+  <input type="text" name="_replyto">
+</label>
+<label>
+  Your message:
+  <textarea name="message"></textarea>
+</label>
+
+<!-- your other form fields go here -->
+
+<button type="submit">Send</button>
+</form>
     </div>
   </main>
 </div>
