--- a/trashpanda.html
+++ b/trashpanda.html
@@ -21,11 +21,11 @@
   <nav class="header">
     <ul>
       
-      <li class="line-break line-top"><a href="index.html">Home</a></li>
-      <li class="line-break"><a href="#">Initiatives</a></li>
-      <li class="line-break"><a href="#">Breakthroughs</a></li>
-      <li class="line-break"><a href="google-maps.html">Map</a></li>
-      <li class="line-break line-bottom"><a href="contact.html">Contact</a></li>
+      <li class="line-break line-top"><a href="#">Home</a></li>
+      <li class="line-break"><a href="#">About</a></li>
+      <li class="line-break"><a href="#">Services</a></li>
+      <li class="line-break"><a href="#">Gallery</a></li>
+      <li class="line-break line-bottom"><a href="#">Contact</a></li>
     </ul>
   </nav>
 </div>
@@ -333,15 +333,36 @@
 </div>
 <!-- End of Floating Blue Circles -->
 
-<div class="page-content">
-  <main class="container">
-    <div class="hero-section">
-      <h1>Nebula Astronautics</h1>
-      <p>Spearheading space exploration as the revolutionary catalyst in Earth's next Odyssey.</p>
-      <p><a href="https://www.spacex.com/human-spaceflight/moon/" class="cta-button">Contact Us</a></p>
-    </div>
-  </main>
-</div>
+<section>
+  <h1 class="contact-header">Contact Us</h1>
+  
+  <div class="wrapper">
+    <div class="row">
+      <div class="column">
+        <div class="form-column">
+          <!-- modify this form HTML and place wherever you want your form -->
 
+<form action="https://formspree.io/f/xqkgjjdj" method="POST">
+<label>Your email:<input type="text" name="_replyto"></label>
+<label>
+  Your message:
+  <textarea name="message"></textarea>
+</label>
+
+<!-- your other form fields go here -->
+
+<button type="submit">Send</button>
+</form>
+        </div>
+      </div>
+      <div class="column">
+        <div class="google-column">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2513.2009917051337!2d-113.99761158389082!3d50.95698805861671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53717745cfdf37a7%3A0x3264cbc76b660607!2sStick%20Fix!5e0!3m2!1sen!2sca!4v1612847536070!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
 </body>
 </html>
