updated call to action button to link to the contact page rather than spacex =]

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <div class="hero-section">
       <h1>Nebula Astronautics</h1>
       <p>Spearheading space exploration as the revolutionary catalyst in Earth's next Odyssey.</p>
-      <p><a href="https://www.spacex.com/human-spaceflight/moon/" class="cta-button">Contact Us</a></p>
+      <p><a href="contact.html" class="cta-button">Contact</a></p>
     </div>
   </main>
 </div>
