--- a/google-maps.html
+++ b/google-maps.html
@@ -335,10 +335,10 @@
 
 <div class="page-content">
   <main class="container">
-    <div class="hero-section">
+    <div class="google-section">
       <h1>Google Maps</h1>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2513.2009917051337!2d-113.99761158389082!3d50.95698805861671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53717745cfdf37a7%3A0x3264cbc76b660607!2sStick%20Fix!5e0!3m2!1sen!2sca!4v1612848671534!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-</form>
+      <div class="google-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2513.2009917051337!2d-113.99761158389082!3d50.95698805861671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53717745cfdf37a7%3A0x3264cbc76b660607!2sStick%20Fix!5e0!3m2!1sen!2sca!4v1612848671534!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
     </div>
   </main>
 </div>
