Added some responsiveness to contact page

--- a/contact.html
+++ b/contact.html
@@ -335,24 +335,19 @@
 
 <div class="page-content">
   <main class="container">
-    <div class="hero-section">
+    <div class="contact-section">
       <h1>Contact Us</h1>
-      <!-- modify this form HTML and place wherever you want your form -->
+      
 
-<form
-action="https://formspree.io/f/xqkgjjdj"
-method="POST"
->
+<form action="https://formspree.io/f/xqkgjjdj" method="POST" >
 <label>
-  Your email:
+  Email:
   <input type="text" name="_replyto">
 </label>
 <label>
-  Your message:
+  Message:
   <textarea name="message"></textarea>
 </label>
-
-<!-- your other form fields go here -->
 
 <button type="submit">Send</button>
 </form>
