repaired incorrect syntax in hamburger menu

--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
   <div class="dropdown">
     <input type="checkbox" id="checkbox_toggle">
     <label for="checkbox_toggle" class="hamburger">
-        <div class="line line-1"></div>
-        <div class="line line-2"></div>
-        <div class="line line-3"></div>
+        <span class="line line-1"></span>
+        <span class="line line-2"></span>
+        <span class="line line-3"></span>
      </label>
   <nav class="header">
     <ul>
