--- a/trashpanda.html
+++ b/trashpanda.html
@@ -14,18 +14,18 @@
   <div class="dropdown">
     <input type="checkbox" id="checkbox_toggle">
     <label for="checkbox_toggle" class="hamburger">
-        <div class="line line-1"></div>
-        <div class="line line-2"></div>
-        <div class="line line-3"></div>
+        <span class="line line-1"></span>
+        <span class="line line-2"></span>
+        <span class="line line-3"></span>
      </label>
   <nav class="header">
     <ul>
       
-      <li class="line-break line-top"><a href="#">Home</a></li>
-      <li class="line-break"><a href="#">About</a></li>
-      <li class="line-break"><a href="#">Services</a></li>
-      <li class="line-break"><a href="#">Gallery</a></li>
-      <li class="line-break line-bottom"><a href="#">Contact</a></li>
+      <li class="line-break line-top"><a href="index.html">Home</a></li>
+      <li class="line-break"><a href="#">Initiatives</a></li>
+      <li class="line-break"><a href="#">Breakthroughs</a></li>
+      <li class="line-break"><a href="google-maps.html">Map</a></li>
+      <li class="line-break line-bottom"><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </div>
